--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,27 @@
 # Core Data Science Libraries
-numpy>=1.21.0
-pandas>=1.3.0
-scikit-learn>=1.0.0
+numpy>=1.21.0,<2.0.0
+pandas>=1.3.0,<3.0.0
+scikit-learn>=1.0.0,<2.0.0
 
 # Machine Learning Models
-xgboost>=1.5.0
+xgboost>=1.5.0,<3.0.0
 
 # Model Persistence
-joblib>=1.0.0
+joblib>=1.0.0,<2.0.0
 
 # Visualization
-matplotlib>=3.4.0
-seaborn>=0.11.0
+matplotlib>=3.4.0,<4.0.0
+seaborn>=0.11.0,<1.0.0
 
 # Web Framework for Deployment
-streamlit>=1.12.0
+streamlit>=1.28.0,<2.0.0
+
+# Streamlit Core Dependencies
+altair>=4.0.0,<6.0.0
+pyarrow>=5.0.0,<16.0.0
+tornado>=6.0.0,<7.0.0
+protobuf>=3.20.0,<5.0.0
+watchdog>=2.1.0
 
 # Additional Utilities
 python-dateutil>=2.8.0
