--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,22 @@
 # Core Data Science Libraries
-numpy>=1.21.0,<2.0.0
-pandas>=1.3.0,<3.0.0
-scikit-learn>=1.0.0,<2.0.0
+numpy
+pandas
+scikit-learn
 
 # Machine Learning Models
-xgboost>=1.5.0,<3.0.0
+xgboost
 
 # Model Persistence
-joblib>=1.0.0,<2.0.0
+joblib
 
-# Visualization
-matplotlib>=3.4.0,<4.0.0
-seaborn>=0.11.0,<1.0.0
+# Visualization (optional for Streamlit app)
+matplotlib
+seaborn
 
 # Web Framework for Deployment
-streamlit>=1.28.0,<2.0.0
-
-# Streamlit Core Dependencies
-altair>=4.0.0,<6.0.0
-pyarrow>=5.0.0,<16.0.0
-tornado>=6.0.0,<7.0.0
-protobuf>=3.20.0,<5.0.0
-watchdog>=2.1.0
+# Streamlit will automatically install: altair, pyarrow, tornado, protobuf, watchdog, etc.
+streamlit
 
 # Additional Utilities
-python-dateutil>=2.8.0
-pytz>=2021.1
+python-dateutil
+pytz
